--- a/iOS/InAnger.iOS.csproj
+++ b/iOS/InAnger.iOS.csproj
@@ -113,6 +113,8 @@
     <BundleResource Include="Resources\settings.png" />
     <BundleResource Include="Resources\settings%402x.png" />
     <BundleResource Include="Resources\settings%403x.png" />
+    <BundleResource Include="Resources\icon40%402x.png" />
+    <BundleResource Include="Resources\icon60%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
