--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -45,6 +45,8 @@
 		<string>Icon-Small@3x</string>
 		<string>Icon-60@2x</string>
 		<string>Icon-Small-40@2x</string>
+		<string>icon60@2x</string>
+		<string>icon40@2x</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
