--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.0.10" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Android.Support.v4" version="22.0.0.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Forms" version="1.4.2.6355" targetFramework="MonoAndroid44" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.0.11" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v4" version="22.2.0.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="21.0.3.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="21.0.3.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.GooglePlayServices" version="22.0.0.0" targetFramework="MonoAndroid50" />
 </packages>
