--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.0.10" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="1.4.2.6355" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.0.11" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="xamarinios10" />
 </packages>
